--- a/vendas.html
+++ b/vendas.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Página De Vendas</h1>
+    <p>Total de vendas do Mes = R$ 5000,00</p>
     <a href="index.html">Voltar Para a home</a>
 </body>
 </html>
