Alterações nas paginas de vendas e home

--- a/vendas.html
+++ b/vendas.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Página De Vendas</h1>
     <p>Total de vendas do Mes = R$ 5000,00</p>
+    <p>Será detalhado as vendas de todos os meses</p>
     <a href="index.html">Voltar Para a home</a>
 </body>
 </html>
