--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Página home</h1>
+    <p>Nesta pagina terá as informações da empresa</p>
     <a href="vendas.html">Ir Para à pagina de vendas</a>
 </body>
 </html>
