Criada a pagina de cliente

--- a/clientes.html
+++ b/clientes.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página De Vendas</h1>
+    <h1>Página De Clientes</h1>
     <p>Total de vendas do Mes = R$ 5000,00</p>
     <p>Será detalhado as vendas de todos os meses</p>
     <h2>Sub titulo</h2>
