Modificado cliente e venda

--- a/vendas.html
+++ b/vendas.html
@@ -11,5 +11,6 @@
     <p>Será detalhado as vendas de todos os meses</p>
     <h2>Sub titulo</h2>
     <a href="index.html">Voltar Para a home</a>
+    <button>Comprar</button>
 </body>
 </html>
