--- a/teste.html
+++ b/teste.html
@@ -6,9 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página home</h1>
+    
     <p>Nesta pagina terá as informações da empresa</p>
     <a href="vendas.html">Ir Para à pagina de vendas</a>
     <p>hhhdh</p>
+
+    <h1>titulo</h1>
 </body>
 </html>
