--- a/outra copy.html
+++ b/outra copy.html
@@ -10,5 +10,6 @@
     <p>Nesta pagina terá as informações da empresa</p>
     <a href="vendas.html">Ir Para à pagina de vendas</a>
     <p>hhhdh</p>
+    <h2>iiiiiiiiiiiiiiiiiii</h2>
 </body>
 </html>
