comitando outra copy

--- a/outra copy.html
+++ b/outra copy.html
@@ -11,5 +11,6 @@
     <a href="vendas.html">Ir Para à pagina de vendas</a>
     <p>hhhdh</p>
     <h2>iiiiiiiiiiiiiiiiiii</h2>
+    <p>ddf</p>
 </body>
 </html>
