Estruturando as Paginas da Empresa, home,vendase clientes

--- a/clientes.html
+++ b/clientes.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Clientes</title>
 </head>
+
 <body>
-    <h1>Página De Clientes</h1>
-    <p>Total de vendas do Mes = R$ 5000,00</p>
-    <p>Será detalhado as vendas de todos os meses</p>
-    <h2>Sub titulo</h2>
+    
     <a href="index.html">Voltar Para a home</a>
-    <button>Cadrastar</button>
+    <h1>Clientes</h1>
+    <h1>Página De Clientes</h1>
+    <h2>Informações dos Clientes</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur saepe fugit, rem soluta amet explicabo
+        repellendus debitis
+        dolorum molestias qui consequatur porro nisi vero ipsa alias harum incidunt voluptas quam!</p>
+
+    <button>Cadastrar</button>
 </body>
+
 </html>
