--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Página home</h1>
-    <p>Nesta pagina terá as informações da empresa</p>
     <a href="vendas.html">Ir Para à pagina de vendas</a>
-    <h1></h1>
-    <h2></h2>
-    <h1></h1>
-    <h3></h3>
-    <h5></h5>
-    <p></p>
-    <button>Botao</button>
-    <button>botao 2</button>
-    
-    <h2>ef</h2>
+    <a href="empresa.html"> Ir para à Pagina da Empresa</a>
+    <a href="clientes.html">Ir para à Pagina de Clientes</a>
+    <h1>Página home</h1>
+    <p>Esta será a pagina home</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae culpa error, accusamus voluptatem, ut quod ea
+        doloribus nemo illum iste dolorem veritatis asperiores alias dicta. Minima harum ducimus iste temporibus.</p>
+
+
+
 </body>
+
 </html>
