Update pagina Home e Empresa

--- a/empresa.html
+++ b/empresa.html
@@ -17,7 +17,7 @@
     </P>
     <a href="vendas.html">Ir Para à pagina de vendas</a>
     <a href="index.html"> Voltar para à pagina Home</a>
-    <p></p>
+    <h1>Donos da empresa</h1>
 </body>
 
 </html>
