--- a/pedidos.html
+++ b/pedidos.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Pagina de pedidos</h1>
     <h2>mais conteudos da pagina de pedido</h2>
+    <p>descrição do pedido</p>
     
 </body>
 </html>
