--- a/pedidos.html
+++ b/pedidos.html
@@ -9,6 +9,7 @@
     <h1>Pagina de pedidos</h1>
     <h2>mais conteudos da pagina de pedido</h2>
     <p>descrição do pedido</p>
+    <p>total pedido</p>
     
 </body>
 </html>
